fix spacing on quotes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,16 +336,19 @@ span {
   background: #ffffff;
   box-shadow: 20px 30px 80px rgba(145, 145, 145, 0.1);
   border-radius: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
 }
 .left-comma img {
   width: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .right-comma {
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 .right-comma img {
   width: 30px;
+  margin-top: 15px;
 }
 .dash-wrap {
   text-align: center;
